feat: Add file preview with line positioning and refactor